fixed-all-nav-bar

--- a/ecommerce/main/templates/main/about_us.html
+++ b/ecommerce/main/templates/main/about_us.html
@@ -3,93 +3,7 @@
 {% block content %}
     <div class="wrapper">
         <div id="back-top"><i class="ion-chevron-up"></i></div>
-        <nav id="top">
-            <div class="container">
-                <div class="box-inner">
-                    <ul class="box-top box-top-left pull-left">
-                        <!--<li><a href="http://ostromi2.demo.towerthemes.com/information-contact"><i class="fa fa-phone"></i> <span class="hidden-xs hidden-sm hidden-md">+88.2345.6789</span></a></li>
-							<li><a href="http://ostromi2.demo.towerthemes.com/index.php?route=checkout/cart" title="Shopping Cart"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md">Shopping Cart</span></a></li>
-				<li><a href="http://ostromi2.demo.towerthemes.com/index.php?route=checkout/checkout" title="Checkout"><i class="fa fa-share"></i> <span class="hidden-xs hidden-sm hidden-md">Checkout</span></a></li>
-			 -->
-                        <li>
-                            <p>Mid-season sale up to 20% OFF. Use code “SALEOFF20”</p>
-                        </li>
-                    </ul>
-                    <ul class="box-top box-top-right pull-right">
-                        <li class="currency">
-                            <!-- <form action="http://ostromi2.demo.towerthemes.com/index.php?route=common/currency/currency"
-                                method="post" enctype="multipart/form-data" id="form-currency" class="header-dropdown">
-                                <div class="btn-group">
-                                    <button class="btn btn-link dropdown-toggle" data-toggle="dropdown"> <span>$</span>
-                                        <span class="hidden-xs hidden-sm">Currency</span>&nbsp;<i
-                                            class="icon-right ion-ios-arrow-down"></i></button>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <button class="currency-select btn btn-link btn-block" type="button"
-                                                name="EUR">€ Euro</button>
-                                        </li>
-                                        <li>
-                                            <button class="currency-select btn btn-link btn-block" type="button"
-                                                name="GBP">£ Pound Sterling</button>
-                                        </li>
-                                        <li>
-                                            <button class="currency-select btn btn-link btn-block" type="button"
-                                                name="USD">$ US Dollar</button>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <input type="hidden" name="code" value="" />
-                                <input type="hidden" name="redirect"
-                                    value="http://ostromi2.demo.towerthemes.com/about_us" />
-                            </form>
-
-                        </li>
-                        <li class="language">
-                            <form action="http://ostromi2.demo.towerthemes.com/index.php?route=common/language/language"
-                                method="post" enctype="multipart/form-data" id="form-language" class="header-dropdown">
-                                <div class="btn-group">
-                                    <button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
-
-                                        <img src="catalog/language/en-gb/en-gb.png" alt="English" title="English">
-                                        <span class="hidden-xs hidden-sm">Language</span>&nbsp;<i
-                                            class="icon-right ion-ios-arrow-down"></i></button>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <button class="btn btn-link btn-block language-select" type="button"
-                                                name="en-gb"><img src="catalog/language/en-gb/en-gb.png" alt="English"
-                                                    title="English" /> English</button>
-                                        </li>
-                                        <li>
-                                            <button class="btn btn-link btn-block language-select" type="button"
-                                                name="de-de"><img src="catalog/language/de-de/de-de.png" alt="Germany"
-                                                    title="Germany" /> Germany</button>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <input type="hidden" name="code" value="" />
-                                <input type="hidden" name="redirect"
-                                    value="http://ostromi2.demo.towerthemes.com/about_us" />
-                            </form>
-
-                        </li> -->
-                        <li id="top-links" class="nav header-dropdown">
-                            <ul class="list-inline">
-                                <li class="dropdown"><a href="account-login.html?route=account/account"
-                                        title="My Account" class="dropdown-toggle" data-toggle="dropdown"><i
-                                            class="fa fa-user"></i> <span class="hidden-xs hidden-sm">My Account</span>
-                                        <i class="icon-right ion-ios-arrow-down"></i></a>
-                                    <ul class="dropdown-menu dropdown-menu-right pt-account">
-                                        <li><a id="pt-register-link"
-                                                href="index5502.html?route=account/register">Register</a></li>
-                                        <li><a id="pt-login-link" href="account-login.html">Login</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        {% include 'main/base_files/topbar.html' %}
         <header class="scroll-fix">
             <div class="container">
                 <div class="box-inner">
