--- a/ecommerce/main/templates/main/base_files/nav-bar.html
+++ b/ecommerce/main/templates/main/base_files/nav-bar.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- For mobile Menu -->
 <div class="pt-menu mobile-menu hidden-lg  " id="pt-menu-5356">
 
     <input type="hidden" id="menu-effect-5356" class="menu-effect" value="none" />
@@ -222,6 +223,7 @@
     </div>
 </div>
 
+<!-- For desktop bar -->
 </div>
 <div class="col-search">
     <div id="search-by-category">
@@ -482,7 +484,7 @@
                     </li>
                     <li class="li-top-item left " style="float: left">
                         <a class="a-top-link" href="cookware.html">
-                            <span>Cookware</span>
+                            <span>Furniture</span>
                             <i class="ion-ios-arrow-down" aria-hidden="true"></i>
                         </a>
                         <!-- Mega Menu -->
@@ -493,7 +495,7 @@
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
                                     <h4><a class="a-mega-second-link"
-                                            href="cookware/cookware-sets.html">Cookware Sets</a></h4>
+                                            href="cookware/cookware-sets.html">Sofa Sets</a></h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
                                                 href="cookware/cookware-sets/ceramic.html">Ceramic</a></h5>
@@ -513,7 +515,7 @@
                                 </div>
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
-                                    <h4><a class="a-mega-second-link" href="cookware/pans.html">Pans</a>
+                                    <h4><a class="a-mega-second-link" href="cookware/pans.html">Bed Set</a>
                                     </h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
@@ -534,7 +536,7 @@
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
                                     <h4><a class="a-mega-second-link"
-                                            href="cookware/skillets.html">Skillets</a></h4>
+                                            href="cookware/skillets.html">Table Set</a></h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
                                                 href="cookware/skillets/aluminum-nonstick.html">Aluminum
@@ -554,7 +556,7 @@
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
                                     <h4><a class="a-mega-second-link"
-                                            href="cookware/teakettles.html">Teakettles</a></h4>
+                                            href="cookware/teakettles.html">Drawer Set</a></h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
                                                 href="cookware/teakettles/aura-stainless.html">Aura
