--- a/ecommerce/main/templates/main/privacy.html
+++ b/ecommerce/main/templates/main/privacy.html
@@ -3,17 +3,7 @@
 {% block content %}
 <div class="wrapper">
     <div id="back-top"><i class="ion-chevron-up"></i></div>
-    <nav id="top">
-        <div class="container">
-            <div class="box-inner">
-                <ul class="box-top box-top-left pull-left">
-                    <li>
-                        <p>Mid-season sale up to 20% OFF. Use code “SALEOFF20”</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {% include 'main/base_files/topbar.html' %}
     <header class="scroll-fix">
         <div class="container">
             <div class="box-inner">
