--- a/ecommerce/main/templates/main/product-wise-list.html
+++ b/ecommerce/main/templates/main/product-wise-list.html
@@ -3,21 +3,7 @@
 {% block content %}
 <div class="wrapper">
     <div id="back-top"><i class="ion-chevron-up"></i></div>
-    <nav id="top">
-        <div class="container">
-            <div class="box-inner">
-                <ul class="box-top box-top-left pull-left">
-                    <!--<li><a href="http://ostromi2.demo.towerthemes.com/information-contact"><i class="fa fa-phone"></i> <span class="hidden-xs hidden-sm hidden-md">+88.2345.6789</span></a></li>
-							<li><a href="http://ostromi2.demo.towerthemes.com/index.php?route=checkout/cart" title="Shopping Cart"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md">Shopping Cart</span></a></li>
-				<li><a href="http://ostromi2.demo.towerthemes.com/index.php?route=checkout/checkout" title="Checkout"><i class="fa fa-share"></i> <span class="hidden-xs hidden-sm hidden-md">Checkout</span></a></li>
-			 -->
-                    <li>
-                        <p>Mid-season sale up to 20% OFF. Use code “SALEOFF20”</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {% include 'main/base_files/topbar.html' %}
     <header class="scroll-fix">
         <div class="container">
             <div class="box-inner">
