--- a/ecommerce/main/templates/main/base_files/topbar.html
+++ b/ecommerce/main/templates/main/base_files/topbar.html
@@ -15,8 +15,8 @@
                                         class="fa fa-user"></i> <span class="hidden-xs hidden-sm">My Account</span>
                                     <i class="icon-right ion-ios-arrow-down"></i></a>
                             <ul class="dropdown-menu dropdown-menu-right pt-account">
-                                <li><a id="pt-register-link" href="index5502.html?route=account/register">Register</a></li>
-                                <li><a id="pt-login-link" href="account-login.html">Login</a></li>
+                                <li><a id="pt-register-link" href="{% url 'register' %}">Register</a></li>
+                                <li><a id="pt-login-link" href="{% url 'login' %}">Login</a></li>
                             </ul>
                         </li>
                     </ul>
