--- a/ecommerce/main/templates/main/product.html
+++ b/ecommerce/main/templates/main/product.html
@@ -121,8 +121,8 @@
     </header>
     <div id="product-product" class="container">
         <ul class="breadcrumb">
-            <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-            <li><a href="ipod-nano2.html">iPod nano 8 GB 2nd Generation (Black)</a></li>
+            <li><a href="{% url 'main' %}"><i class="fa fa-home"></i></a></li>
+            <li><a href="">iPod nano 8 GB 2nd Generation (Black)</a></li>
         </ul>
         <div class="row">
             <div id="content" class="col-sm-12">
@@ -138,7 +138,7 @@
                                     id="product-cloud-zoom" style="width: 800px; height: 800px;" rel=" showTitle: false ,
 												zoomWidth:800,zoomHeight:800,
 												 position:'inside', adjustX: 0 ">
-                                    <img src="{% static 'image/cache/catalog/products/2/16-800x800.jpg' %}"
+                                    <img height="550px" width="550px" src="{% static 'image/cache/catalog/products/2/16-800x800.jpg' %}"
                                         title="iPod nano 8 GB 2nd Generation (Black)"
                                         alt="iPod nano 8 GB 2nd Generation (Black)" />
                                 </a>
