--- a/ecommerce/main/templates/main/terms.html
+++ b/ecommerce/main/templates/main/terms.html
@@ -120,8 +120,8 @@
     </header>
     <div id="information-information" class="container">
         <ul class="breadcrumb">
-            <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-            <li><a href="terms.html">Terms &amp; Conditions</a></li>
+            <li><a href="{% url 'main' %}"><i class="fa fa-home"></i></a></li>
+            <li><a href="">Terms &amp; Conditions</a></li>
         </ul>
         <div class="row">
             <div id="content" class="col-sm-12">
