--- a/ecommerce/main/templates/main/about_us.html
+++ b/ecommerce/main/templates/main/about_us.html
@@ -125,8 +125,8 @@
         </header>
         <div id="information-information" class="container">
             <ul class="breadcrumb">
-                <li><a href="index.html"><i class="fa fa-home"></i></a></li>
-                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="{% url 'main' %}"><i class="fa fa-home"></i></a></li>
+                <li><a href="{% url 'about' %}">About Us</a></li>
             </ul>
             <div class="row">
                 <div id="content" class="col-sm-12">
