--- a/ecommerce/main/templates/main/base_files/nav-bar.html
+++ b/ecommerce/main/templates/main/base_files/nav-bar.html
@@ -12,12 +12,12 @@
             <h3>Mobile Menu</h3>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="index.html">
+            <a class="a-top-link a-item" href="{% url 'main' %}">
                 <span>Home</span>
             </a>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="cookware.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Cookware</span>
             </a>
             <span class="top-click-show a-click-show">
@@ -28,7 +28,7 @@
             <div class="sub-menu-container">
                 <ul class="ul-second-items">
                     <li class="li-second-items">
-                        <a href="cookware/cookware-sets.html" class="a-second-link a-item">
+                        <a href="{% url 'product-wise-list' %}" class="a-second-link a-item">
                             <span class="a-second-title">Cookware Sets</span>
                         </a>
                         <span class="second-click-show a-click-show">
@@ -170,32 +170,32 @@
             </div>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="appliances.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Appliances</span>
             </a>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="bakeware.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Bakere</span>
             </a>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="knives.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Knives</span>
             </a>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="drinkware.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Drinkware</span>
             </a>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="kitchenwares.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Kitchenwares</span>
             </a>
         </li>
         <li class="li-top-item ">
-            <a class="a-top-link a-item" href="tablewares.html">
+            <a class="a-top-link a-item" href="{% url 'product-wise-list' %}">
                 <span>Tableware</span>
             </a>
         </li>
@@ -478,12 +478,12 @@
                 <input type="hidden" id="menu-effect-7676" class="menu-effect" value="none" />
                 <ul class="ul-top-items">
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="index.html">
+                        <a class="a-top-link" href="{% url 'main' %}">
                             <span>Home</span>
                         </a>
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="cookware.html">
+                        <a class="a-top-link" href="{% url  'product-wise-list' %}">
                             <span>Furniture</span>
                             <i class="ion-ios-arrow-down" aria-hidden="true"></i>
                         </a>
@@ -495,81 +495,81 @@
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
                                     <h4><a class="a-mega-second-link"
-                                            href="cookware/cookware-sets.html">Sofa Sets</a></h4>
+                                            href="{% url 'product-wise-list' %}">Sofa Sets</a></h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/cookware-sets/ceramic.html">Ceramic</a></h5>
+                                                href="{% url 'product-wise-list' %}">Ceramic</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/cookware-sets/dishwashersafe.html">Dishwasher-Safe</a>
+                                                href="{% url 'product-wise-list' %}">Dishwasher-Safe</a>
                                         </h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/cookware-sets/gas-stovetop-compatible.html">Gas
+                                                href="{% url 'product-wise-list' %}">Gas
                                                 Stovetop Compatible</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/cookware-sets/induction-stovetop-compatible.html">Induction
+                                                href="{% url 'product-wise-list' %}">Induction
                                                 Stovetop Compatible</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/cookware-sets/mirror-satin.html">Mirror
+                                                href="{% url 'product-wise-list' %}">Mirror
                                                 Satin</a></h5>
                                     </div>
                                 </div>
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
-                                    <h4><a class="a-mega-second-link" href="cookware/pans.html">Bed Set</a>
+                                    <h4><a class="a-mega-second-link" href="{% url 'product-wise-list' %}">Bed Set</a>
                                     </h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/pans/hard-anodizeds.html">Hard Anodized</a>
+                                                href="{% url 'product-wise-list' %}">Hard Anodized</a>
                                         </h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/pans/scratch-resistant.html">Scratch
+                                                href="{% url 'product-wise-list' %}">Scratch
                                                 Resistant</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/pans/thermo-spot.html">Thermo-Spot</a></h5>
+                                                href="{% url 'product-wise-list' %}">Thermo-Spot</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/pans/titanium-nonstick.html">Titanium
+                                                href="{% url 'product-wise-list' %}">Titanium
                                                 Nonstick </a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/pans/ultimate.html">Ultimate</a></h5>
+                                                href="{% url 'product-wise-list' %}">Ultimate</a></h5>
                                     </div>
                                 </div>
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
                                     <h4><a class="a-mega-second-link"
-                                            href="cookware/skillets.html">Table Set</a></h4>
+                                            href="{% url 'product-wise-list' %}">Table Set</a></h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/skillets/aluminum-nonstick.html">Aluminum
+                                                href="{% url 'product-wise-list' %}">Aluminum
                                                 Nonstick</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/skillets/calphalon.html">Calphalon</a></h5>
+                                                href="{% url 'product-wise-list' %}">Calphalon</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/skillets/contemporary.html">Contemporary</a>
+                                                href="{% url 'product-wise-list' %}">Contemporary</a>
                                         </h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/skillets/hard-anodized.html">Hard-Anodized</a>
+                                                href="{% url 'product-wise-list' %}">Hard-Anodized</a>
                                         </h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/skillets/sauce-pan.html">Sauce Pan</a></h5>
+                                                href="{% url 'product-wise-list' %}">Sauce Pan</a></h5>
                                     </div>
                                 </div>
                                 <div class="col-md-3 sub-item2-content sub-item2-category-content"
                                     data-cols="3">
                                     <h4><a class="a-mega-second-link"
-                                            href="cookware/teakettles.html">Drawer Set</a></h4>
+                                            href="{% url 'product-wise-list' %}">Drawer Set</a></h4>
                                     <div class="sub_item3-content">
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/teakettles/aura-stainless.html">Aura
+                                                href="{% url 'product-wise-list' %}">Aura
                                                 Stainless</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/teakettles/cuisinart.html">Cuisinart</a></h5>
+                                                href="{% url 'product-wise-list' %}">Cuisinart</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/teakettles/homeinart.html">Homeinart</a></h5>
+                                                href="{% url 'product-wise-list' %}">Homeinart</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/teakettles/kettle-stainless.html">Kettle
+                                                href="{% url 'product-wise-list' %}">Kettle
                                                 Stainless</a></h5>
                                         <h5><a class="a-mega-third-link"
-                                                href="cookware/teakettles/steel-stovetop.html">Steel
+                                                href="{% url 'product-wise-list' %}">Steel
                                                 Stovetop</a></h5>
                                     </div>
                                 </div>
@@ -580,32 +580,32 @@
                         <!-- Flyout Menu -->
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="appliances.html">
+                        <a class="a-top-link" href="{% url 'product' %}">
                             <span>Appliances</span>
                         </a>
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="bakeware.html">
+                        <a class="a-top-link" href="{% url 'product-wise-list' %}">
                             <span>Bakeware</span>
                         </a>
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="knives.html">
+                        <a class="a-top-link" href="{% url 'product-wise-list' %}">
                             <span>Knives</span>
                         </a>
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="drinkware.html">
+                        <a class="a-top-link" href="{% url 'product-wise-list' %}">
                             <span>Drinkware</span>
                         </a>
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="kitchenwares.html">
+                        <a class="a-top-link" href="{% url 'product-wise-list' %}">
                             <span>Kitchenwares</span>
                         </a>
                     </li>
                     <li class="li-top-item left " style="float: left">
-                        <a class="a-top-link" href="tablewares.html">
+                        <a class="a-top-link" href="{% url 'product-wise-list' %}">
                             <span>Tableware</span>
                         </a>
                     </li>
