--- a/ecommerce/dashboard/templates/dashboard/dashboard.html
+++ b/ecommerce/dashboard/templates/dashboard/dashboard.html
@@ -10,7 +10,7 @@
 
             <div class="col-xl-3 col-sm-6 col-12">
                 <div class="card">
-                    <a href="{%url 'customer' %}">
+                    <a href="">
                         <div class="card-body">
                             <div class="dash-widget-header">
                                 <span class="dash-widget-icon bg-6">
@@ -135,7 +135,7 @@
                                     <tr>
                                         <td>
                                             <h2 class="table-avatar">
-                                                <a href="{%url 'customer_profile' active_user.id %}">{{active_user.full_name}}</a>
+                                                <a href="">{{active_user.full_name}}</a>
                                             </h2>
                                         </td>
                                         <td>{{active_user.reg_date}}</td>
@@ -204,7 +204,7 @@
                                     <tr>
                                         <td>
                                             <h2 class="table-avatar">
-                                                <a href="{%url 'customer_profile' expired_user.id %}">{{expired_user.full_name}}</a>
+                                                <a href="">{{expired_user.full_name}}</a>
                                             </h2>
                                         </td>
                                         <td>{{expired_user.exp_date}}</td>
