--- a/ecommerce/dashboard/templates/dashboard/user-login.html
+++ b/ecommerce/dashboard/templates/dashboard/user-login.html
@@ -16,7 +16,7 @@
                         <div class="card-body">
                             <form action="#">
                                 <div class="form-head">
-                                    <a href="index.html" class="logo"><img src="{%static 'dashboard/images/logo.svg'%}"
+                                    <a href="index.html" class="logo"><img src="{% static 'main/image/catalog/logo/ostromi2.png' %}"
                                             class="img-fluid" alt="logo"></a>
                                 </div>
                                 <h4 class="text-primary my-4">Log in !</h4>
