--- a/ecommerce/main/templates/main/base_files/footer.html
+++ b/ecommerce/main/templates/main/base_files/footer.html
@@ -49,7 +49,7 @@
                             <div class="dropdown-menu footer-content">
                                 <div class="contact-block">
                                     <a href="#" class="logo-footer"><img
-                                            src="image/catalog/logo/ostromi2-footer.png" alt="logo-footer"></a>
+                                            src="{% static 'main/image/catalog/logo/ostromi2-footer.png' %}" alt="logo-footer"></a>
                                     <div class="phone">
                                         <p>Call Us toll Free</p>
                                         <h4>(+123) 456 789 or (+123) 666 888</h4>
