account register fix

--- a/ecommerce/main/templates/main/account-login.html
+++ b/ecommerce/main/templates/main/account-login.html
@@ -654,7 +654,7 @@
                             <p><strong>Register</strong></p>
                             <p>By creating an account you will be able to shop faster, be up to date on an order's
                                 status, and keep track of the orders you have previously made.</p>
-                            <a href="index5502.html?route=account/register" class="btn btn-primary">Continue</a>
+                            <a href="{% url 'register' %}" class="btn btn-primary">Continue</a>
                         </div>
                     </div>
                     <div class="col-sm-6">
