--- a/ecommerce/main/templates/main/base_files/footer.html
+++ b/ecommerce/main/templates/main/base_files/footer.html
@@ -49,7 +49,7 @@
                             <div class="dropdown-menu footer-content">
                                 <div class="contact-block">
                                     <a href="#" class="logo-footer"><img
-                                            src="{% static 'main/image/catalog/logo/ostromi2-footer.png' %}" alt="logo-footer"></a>
+                                            src="{% static 'image/catalog/logo/logo-footer.png' %}" alt="logo-footer"></a>
                                     <div class="phone">
                                         <p>Call Us toll Free</p>
                                         <h4>(+123) 456 789 or (+123) 666 888</h4>
@@ -132,7 +132,7 @@
                     service. We've been delivering best bang for your buck for over 10 years, every item we
                     stock is carefully selected to ensure we offer you top quality at competitive prices.</p>
                 <div class="payment">
-                    <img src="image/catalog/ptblock/payment.png" alt="payment">
+                    <img src="{% static 'image/catalog/ptblock/payment.png' %}" alt="payment">
                 </div>
 
 
